--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ohana-heart-web</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="ohana-heart-web" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>WK Foundation Solano</title>
+    <meta name="description" content="WK Foundation Solano is a 501(c)(3) nonprofit uplifting Solano County through fitness, community, and youth mentorship programs." />
+    <meta name="author" content="WK Foundation Solano" />
+  
+    <meta property="og:title" content="WK Foundation Solano" />
+    <meta property="og:description" content="A nonprofit organization dedicated to empowering Solano County through martial arts, community engagement, and mentorship." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <meta property="og:image" content="https://images.unsplash.com/photo-1609947013645-232a00b3eb1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" />
+  
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@wkfoundation" />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1609947013645-232a00b3eb1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" />
   </head>
+  
 
   <body>
     <div id="root"></div>
