--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@wkfoundation" />
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1609947013645-232a00b3eb1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" />
-  
-      <!-- Add favicon -->
-      <link rel="icon" href="/favicon.ico" type="image/x-icon" /></head>
-  
 
+    <!-- Add favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  </head>
+  
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
