--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <meta name="description" content="WK Foundation Solano is a 501(c)(3) nonprofit uplifting Solano County through fitness, community, and youth mentorship programs." />
     <meta name="author" content="WK Foundation Solano" />
   
+    <!-- Open Graph meta tags for social media sharing -->
     <meta property="og:title" content="WK Foundation Solano" />
     <meta property="og:description" content="A nonprofit organization dedicated to empowering Solano County through martial arts, community engagement, and mentorship." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1609947013645-232a00b3eb1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" />
+    <meta property="og:image" content="https://wkfoundation.netlify.app/path-to-your-hero-image.jpg" />
+    <meta property="og:url" content="https://wkfoundation.netlify.app" />
   
+    <!-- Twitter meta tags for social media sharing -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@wkfoundation" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1609947013645-232a00b3eb1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" />
+    <meta name="twitter:image" content="https://wkfoundation.netlify.app/path-to-your-hero-image.jpg" />
 
     <!-- Add favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="https://em-content.zobj.net/thumbs/240/apple/325/call-me-hand_1f919.png" />
   </head>
   
   <body>
