updte html mistake  commit

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="WK Foundation Solano" />
     <meta property="og:description" content="A nonprofit organization dedicated to empowering Solano County through martial arts, community engagement, and mentorship." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://wkfoundation.netlify.app/path-to-black-background-hero-image.jpg" />
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbpPJsar-ciLqEL6cdU0tgxFiLKCaX6KCo2Q&s" />
   
     <!-- Twitter meta tags for social media sharing -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@wkfoundation" />
-    <meta name="twitter:image" content="https://wkfoundation.netlify.app/path-to-black-background-hero-image.jpg" />
+    <meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbpPJsar-ciLqEL6cdU0tgxFiLKCaX6KCo2Q&s" />
 
     <!-- Add favicon -->
     <link rel="icon" type="image/png" href="https://em-content.zobj.net/thumbs/240/apple/325/call-me-hand_1f919.png" />
