--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="WK Foundation Solano" />
     <meta property="og:description" content="A nonprofit organization dedicated to empowering Solano County through martial arts, community engagement, and mentorship." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.suisun.com/files/sharedassets/suisuncity/v/1/community/images/suisun-city-page.jpg" />
+    <meta property="og:image" content="https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/326369271_1663823294032306_3689385228809604397_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=OH29L7YprsYQ7kNvwHL4XDB&_nc_oc=AdkYjPa7JKlj3Kj2x8InhvjLO9k3tCBAn3bVx3fvpbrmWsn9AZrf6flx4iNnRTZlDPNgd44b95i3qH6-QUbagLWh&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&_nc_gid=yRazosR2GbJjwdT3YcZGqQ&oh=00_AfLFntDWIg1c0KHcDsEDC3sMMXfHKng27qN87fVpaZmAow&oe=682D65F3" />
   
     <!-- Twitter meta tags for social media sharing -->
     <meta name="twitter:card" content="summary_large_image" />
