logo with color correct and css stuff

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <meta property="og:title" content="WK Foundation Solano" />
     <meta property="og:description" content="A nonprofit organization dedicated to empowering Solano County through martial arts, community engagement, and mentorship." />
     <meta property="og:type" content="website" />
-    <meta name="og:image" content="https://solanoopenspace.org/Images/Galleries/Other%20Outdoor/Suisun%20City%20Waterfront/5.jpg" />
-  
+    <meta name="og:image" content="/lovable-uploads/cover.jpg" />  
     <!-- Twitter meta tags for social media sharing -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@wkfoundation" />
